<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Factura"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/usuario2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act2_usuario" />

        <TextView
            android:id="@+id/contra2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act2_correo" />

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_productos" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="vertical">


        <LinearLayout
            android:gravity="center"
            android:id="@+id/botonF1"
            android:layout_row="0"
            android:layout_column="0"
            android:orientation="vertical"
            android:text="bottom1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Producto1" />

            <TextView
                android:id="@+id/textoF1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor1" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/botonF2"
            android:layout_row="0"
            android:layout_column="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Producto2" />

            <TextView
                android:id="@+id/textoF2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boton3"
            android:layout_row="0"
            android:layout_column="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Producto3" />

            <TextView
                android:id="@+id/textoF3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boton4"
            android:layout_row="1"
            android:layout_column="0"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Producto4" />

            <TextView
                android:id="@+id/textoF4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boton5"
            android:layout_row="1"
            android:layout_column="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Producto5" />

            <TextView
                android:id="@+id/textoF5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boton6"
            android:layout_row="1"
            android:layout_column="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Producto6" />

            <TextView
                android:id="@+id/textoF6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boton7"
            android:layout_row="2"
            android:layout_column="0"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Producto7" />

            <TextView
                android:id="@+id/textoF7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor7" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boton8"
            android:layout_row="2"
            android:layout_column="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Producto8" />

            <TextView
                android:id="@+id/textoF8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor8" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boton9"
            android:layout_row="2"
            android:layout_column="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Producto9" />

            <TextView
                android:id="@+id/textoF9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor9" />
        </LinearLayout>
    </GridLayout>

    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="share"
        />


</LinearLayout>